Add course detail API
